loading demo and adding expense