@@ -1,8 +1,10 @@
 package com.example.backendjava.utils;
 
-import java.io.File;
 import java.io.IOException;
-import java.nio.file.Files;
+import java.io.InputStream;
+
+import org.springframework.core.io.Resource;
+
 import java.util.Base64;
 
 public class Base64Util {
@@ -11,10 +13,10 @@ public class Base64Util {
         return Base64.getDecoder().decode(base64String);
     }
 
-    public static String convertImageToBase64(String filePath) throws IOException {
-        File file = new File(filePath);
-        byte[] fileContent = Files.readAllBytes(file.toPath());
-
-        return Base64.getEncoder().encodeToString(fileContent);
+    public static byte[] convertImageToBase64(Resource imgResource) throws IOException {
+        try (InputStream inputStream = imgResource.getInputStream()) {
+            byte[] fileContent = inputStream.readAllBytes();
+            return Base64.getEncoder().encode(fileContent);
+        }
     }
 }
